tests/fixtures/invalid/int_str.py
# Cannot call int() with Str
x = int("hello")
